# onion-forger

./: .gitignore  README.md  WHITEPAPER.md  crawl_gui_test.ts  future_architecture.md  index.html  package-lock.json  package.json  playwright.config.ts  replace_urls.py  rust-toolchain.toml  test_clearnet_checkbox.mjs  test_gui_hang.ts  vite.config.ts  vitest.config.ts
Tor Forge/: test_multipath.py  (+3 more)
Tor Forge/loki-tor-core/: Cargo.toml  test_arti.rs
Tor Forge/loki-tor-core/.loki_tor_state/cache/dir_blobs/: con_microdesc_sha3-256-15cfc5394b66c771bdb9866bd749de310534799b38b1f1a803edf84178f492cf
Tor Forge/loki-tor-core/.loki_tor_state/state/state/: circuit_timeouts.json  guards.json
Tor Forge/loki-tor-core/.loki_tor_state/swarm/node_0/cache/dir_blobs/: con_microdesc_sha3-256-217753be026bf7061129e487e2fbad94e520da136573fca75d3eee733a06862a
Tor Forge/loki-tor-core/.loki_tor_state/swarm/node_0/state/state/: circuit_timeouts.json  guards.json
Tor Forge/loki-tor-core/.loki_tor_state/swarm/node_1/state/state/: circuit_timeouts.json  guards.json
Tor Forge/loki-tor-core/.loki_tor_state/swarm/node_10/cache/dir_blobs/: con_microdesc_sha3-256-f19ece139379034b1adf2b99ff3655307fe261257bd23ff67a235d77116503da
Tor Forge/loki-tor-core/.loki_tor_state/swarm/node_10/state/state/: circuit_timeouts.json  guards.json
Tor Forge/loki-tor-core/.loki_tor_state/swarm/node_11/state/state/: circuit_timeouts.json  guards.json
Tor Forge/loki-tor-core/.loki_tor_state/swarm/node_12/state/state/: circuit_timeouts.json  guards.json
Tor Forge/loki-tor-core/.loki_tor_state/swarm/node_13/cache/dir_blobs/: con_microdesc_sha3-256-0d2fc3324f23f53963e71c0e42d23db03b28776e4f29a36762128db4c326aeb1
Tor Forge/loki-tor-core/.loki_tor_state/swarm/node_13/state/state/: circuit_timeouts.json  guards.json
Tor Forge/loki-tor-core/.loki_tor_state/swarm/node_14/state/state/: circuit_timeouts.json  guards.json
Tor Forge/loki-tor-core/.loki_tor_state/swarm/node_140/cache/: dir.sqlite3
Tor Forge/loki-tor-core/.loki_tor_state/swarm/node_15/state/state/: circuit_timeouts.json  guards.json
Tor Forge/loki-tor-core/.loki_tor_state/swarm/node_16/state/state/: circuit_timeouts.json  guards.json
Tor Forge/loki-tor-core/.loki_tor_state/swarm/node_17/cache/dir_blobs/: con_microdesc_sha3-256-448a9dda77bb9f5c5c9c637432104d167751c9c3a3c6386c0511109d22dbc71c
Tor Forge/loki-tor-core/.loki_tor_state/swarm/node_17/state/state/: circuit_timeouts.json  guards.json
Tor Forge/loki-tor-core/.loki_tor_state/swarm/node_18/state/state/: circuit_timeouts.json  guards.json
Tor Forge/loki-tor-core/.loki_tor_state/swarm/node_19/cache/dir_blobs/: con_microdesc_sha3-256-d102823ad5530cc0405add36213e3d14fe18737d50532e1878bdfd358cc1196f
Tor Forge/loki-tor-core/.loki_tor_state/swarm/node_38/cache/: dir.sqlite3
Tor Forge/loki-tor-core/.loki_tor_state/swarm/node_40/cache/: dir.sqlite3
Tor Forge/loki-tor-core/.loki_tor_state/swarm/node_45/cache/: dir.sqlite3
Tor Forge/loki-tor-core/.loki_tor_state/swarm/node_49/cache/: dir.sqlite3
Tor Forge/loki-tor-core/src/: lib.rs  main.rs
Tor Forge/loki-tor-core/src/actors/: mod.rs  multipath.rs  socks_proxy.rs  tor_manager.rs
Tor Forge/loki-tor-core/src/quorum/: bft.rs
Tor Forge/loki-tor-core/src/telemetry/: aimd.rs  kalman.rs  mod.rs  ucb1.rs
src-tauri/: .gitignore  Cargo.toml  Entitlements.mac.plist  build.rs  create_vibe_spinner.py  multi_client_test.rs  tauri.conf.json  track_bench.py
src-tauri/.crawli/qilin_nodes.sled/: db  snap.000000000000D440  snap.00000000000116DA
src-tauri/capabilities/: default.json
src-tauri/docs/: Architecture_Blueprint_v2.1_Final_Polish_Edition.md  Phase_74C_Qilin_Optimization.md  whitepaper__AI_Readme.md  whitepaper__Lessons_Learned.md  whitepaper__Qilin_Architecture.md
src-tauri/examples/: adapter_benchmark.rs  adapter_deep_matrix_pipeline.rs  adapter_matrix_live_pipeline.rs  adapter_test.rs  alpha_fetch_diagnostic.rs  arti_direct_test.rs  arti_integration_test.rs  capture_redirects.rs  cli_full_test.rs  comprehensive_site_test.rs  download_test.rs  dragon_dump.rs  dragon_js_probe_v2.rs  dragon_probe.rs  dragonforce_probe.rs  full_crawl_test.rs  hs_storage_probe.rs  local_piece_resume_probe.rs  lockbit_live_pipeline.rs  mock_power_outage_resume.rs  node_scanner.rs  pandora_root_probe.rs  phase124_5min.rs  probe_test.rs  qilin_30min_partition_soak.rs  qilin_5min.rs  qilin_advanced_probe.rs  qilin_authorized_soak.rs  qilin_benchmark.rs  qilin_cli_test.rs  qilin_debug_probe.rs  qilin_download_healing.rs  qilin_e2e_test.rs  qilin_exhaustive_probe.rs  qilin_extreme_probe.rs  qilin_fresh_crawl.rs  qilin_ghost_test.rs  qilin_headless_probe.rs  qilin_headless_probe_ddg.rs  qilin_healing_test.rs  (+15 more)
src-tauri/icons/: icon.icns
src-tauri/src/: aimd.rs  aria_downloader.rs  arti_client.rs  arti_client.rs.bak  arti_connector.rs  azure_connectivity.rs  bbr.rs  bft_quorum.rs  binary_telemetry.rs  circuit_health.rs  cli.rs  db.rs  frontier.rs  ghost_browser.rs  index_generator.rs  io_vanguard.rs  kalman.rs  lib.rs  main.rs  mega_handler.rs  multi_client_pool.rs  multipath.rs  network_disk.rs  path_utils.rs  resource_governor.rs  runtime_metrics.rs  scorer.rs  seed_manager.rs  sp_test.rs  speculative_prefetch.rs  spillover.rs  subtree_heatmap.rs  target_state.rs  telemetry_bridge.rs  timer.rs  tor.rs  tor_native.rs  tor_runtime.rs  torrent_handler.rs  work_stealing.rs
src-tauri/src/adapters/: abyss.rs  adapter_pipeline_trait.rs  alphalocker.rs  autoindex.rs  dragonforce.rs  explorer.rs  genesis.rs  inc_ransom.rs  lockbit.rs  mod.rs  nu.rs  pear.rs  play.rs  plugin_host.rs  qilin.rs  qilin_ddos_guard.rs  qilin_nodes.rs  tengu.rs  universal_explorer.rs  worldleaks.rs
src-tauri/tests/: adapter_benchmark_test.rs  benchmark_results.csv  benchmark_test_db.json  dragon_cli_test.rs  engine_test.rs  known_domains.json  lockbit_live_pipeline_test.rs  matrix_signatures.json  mega_torrent_test.rs  play_e2e_test.rs  play_features_test.rs  reqwest_coexistence_test.rs
src-tauri/tests/mocks/: dragonforce_ast_mock.html  dragonforce_root_mock.html  qilin_mock.html
(+200 files in other folders)
