[package]
name = "crawli"
version = "0.2.3"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "crawli_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.49.0", features = ["full"] }
reqwest = { version = "0.13.2", features = ["rustls", "socks", "json", "stream"] }
scraper = "0.25.0"
async-trait = "0.1.89"
dashmap = "6.1.0"
anyhow = "1.0.102"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-fs = "2.4.5"
bloomfilter = "3.0.1"
rand = "0.8"
futures = "0.3.32"
url = "2.5.8"
bytes = "1.11.1"
sha2 = "0.10.9"
hex = "0.4.3"
sled = "0.34.7"
urlencoding = "2.1"
crossbeam-queue = "0.3.12"
memmap2 = "0.9.10"
regex = "1.12.3"
headless_chrome = "1.0.21"
chrono = "0.4.44"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59.0", features = ["Win32_Storage_FileSystem", "Win32_Foundation", "Win32_System_IO"] }

[dev-dependencies]
tauri = { version = "2", features = ["test"] }
