[package]
name = "crawli"
version = "0.5.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
default-run = "crawli"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "crawli_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "adapter-benchmark"
path = "src/bin/adapter_benchmark.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.49.0", features = ["full"] }
reqwest = { version = "0.13.2", features = ["rustls", "socks", "json", "stream"] }
scraper = "0.25.0"
async-trait = "0.1.89"
dashmap = "6.1.0"
anyhow = "1.0.102"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-fs = "2.4.5"
bloomfilter = "3.0.1"
rand = "0.8"
futures = "0.3.32"
url = "2.5.8"
bytes = "1.11.1"
sha2 = "0.10.9"
hex = "0.4.3"
sled = "0.34.7"
libsqlite3-sys = { version = "0.36.0", features = ["bundled"] }
urlencoding = "2.1"
crossbeam-queue = "0.3.12"
memmap2 = "0.9.10"
regex = "1.12.3"
headless_chrome = "1.0.21"
rustls = { version = "0.23", features = ["ring"] }
chrono = "0.4.44"
# Phase 43B: Native Rust Tor (replaces tor.exe)
arti-client = { version = "0.39.0", features = ["onion-service-client"] }
tor-rtcompat = { version = "0.39.0" }
socket2 = "0.5"
sysinfo = "0.32"
hyper-util = { version = "0.1.20", features = ["full"] }
tower-service = "0.3.3"
http = "1.4.0"
hyper = "1.8.1"
http-body-util = "0.1.3"
tokio-stream = "0.1.18"
hyper-rustls = { version = "0.27.7", features = ["http1"] }
prost = "0.14.1"
walkdir = "2.5.0"
open = "5.3.2"
rhai = { version = "1.24.0", features = ["sync"] }
base64 = "0.22.1"
# Phase 52: Mega.nz + Torrent integration
mega = "0.8"
reqwest_mega = { package = "reqwest", version = "0.12", default-features = false, features = ["rustls-tls"] }
lava_torrent = "0.11"
magnet-url = "3.0"
librqbit = { version = "8.1", default-features = false, features = ["rust-tls", "disable-upload"] }
# Phase 53: Azure + Intranet Enterprise (optional, compile-time gated)
azure_storage_blob = { version = "0.9", optional = true }
azure_identity = { version = "0.32", optional = true }
azure_core = { version = "0.32", optional = true }
axum = { version = "0.8", optional = true }
tower-http = { version = "0.6", features = ["fs", "cors"], optional = true }
aes-gcm = { version = "0.10", optional = true }

[features]
default = []
azure = ["dep:azure_storage_blob", "dep:azure_identity", "dep:azure_core", "dep:axum", "dep:tower-http", "dep:aes-gcm"]

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59.0", features = ["Win32_Storage_FileSystem", "Win32_Foundation", "Win32_System_IO"] }

[dev-dependencies]
tauri = { version = "2", features = ["test"] }
tracing-subscriber = "0.3.22"

[profile.release]
strip = true
lto = "fat"
opt-level = 3
panic = "abort"

[lints.clippy]
clone_on_copy = "allow"
collapsible_if = "allow"
collapsible_str_replace = "allow"
default_constructed_unit_structs = "allow"
derivable_impls = "allow"
double_ended_iterator_last = "allow"
field_reassign_with_default = "allow"
filter_next = "allow"
if_same_then_else = "allow"
large_enum_variant = "allow"
manual_clamp = "allow"
manual_is_multiple_of = "allow"
manual_repeat_n = "allow"
needless_borrow = "allow"
new_without_default = "allow"
redundant_closure = "allow"
redundant_locals = "allow"
too_many_arguments = "allow"
useless_conversion = "allow"
useless_format = "allow"
