[package]
name = "loki-tor-core"
version = "0.1.0"
edition = "2021"
description = "Military-grade multi-path Tor daemon proxy with aerospace methodologies"

[dependencies]
tokio = { version = "1.40", features = ["full", "parking_lot"] }
arti-client = { version = "0.23.0", features = ["onion-service-client"] }
tor-rtcompat = { version = "0.23.0" }
tor-socksproto = { version = "0.23.0" }
tor-config = { version = "0.23.0" }
tor-circmgr = { version = "0.23.0" }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
anyhow = "1.0.89"
ractor = "0.12.3"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
rustls = "0.23.14"
rand = "0.8.5"
futures = "0.3.30"
clap = { version = "4.5.18", features = ["derive"] }
ring = "0.17.8"
async-trait = "0.1.89"
bytes = "1.11.1"
sled = "0.34.7"
directories = "6.0.0"
regex = "1.10"
nix = { version = "0.29", features = ["resource"] }
core_affinity = "0.8"
num_cpus = "1.16"
socket2 = "0.5"
sysinfo = "0.32"
cfg-if = "1.0"
